--- a/src/app/chess/chess.module.css
+++ b/src/app/chess/chess.module.css
@@ -17,5 +17,10 @@
   display: block;
   width: 80px;
   height: 80px;
-  color: red
+  color: darkorange;
+  border: none;
+}
+
+.movable {
+  border: 4px solid red;
 }
